assets/styles.css
html,body,div,span,applet,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,abbr,acronym,address,big,cite,code,del,dfn,em,img,ins,kbd,q,s,samp,small,strike,strong,sub,sup,tt,var,b,u,i,center,dl,dt,dd,ol,ul,li,fieldset,form,label,legend,table,caption,tbody,tfoot,thead,tr,th,td,article,aside,canvas,details,embed,figure,figcaption,footer,header,hgroup,menu,nav,output,ruby,section,summary,time,mark,audio,video{border:0;font-size:100%;font:inherit;vertical-align:baseline;margin:0;padding:0}article,aside,details,figcaption,figure,footer,header,hgroup,menu,nav,section{display:block}body{line-height:1}ol,ul{list-style:none}blockquote,q{quotes:none}blockquote:before,blockquote:after,q:before,q:after{content:none}table{border-collapse:collapse;border-spacing:0}
.color-murky-pond {
	color: #91947f;
}
h1, h2, h3, h4, h5, h6 {
	font-family: "Lucida Grande", "Lucida Sans Unicode", Geneva, sans-serif;
}
h2 {
	font-weight: bold;
	font-size: 1.5em;
}
.code {
	font-family: "Monaco", monospace;
    line-height: 1.6em;
}
.font-size-0\.8 {
	font-size: 0.8em;
}
.font-size-1\.52 {
	font-size: 1.52em;
}
.font-size-15 {
	font-size: 15em;
}
.text-center {
	text-align: center;
}
a:link { color: #b71863; }
a:hover { color: #880442; }
.button {
	padding: 13px 15px;
}
a.button {
	border: 1px solid;
	border-radius: 10px;
	font-family: "Lucida Grande", "Lucida Sans Unicode", Geneva, sans-serif;
	text-decoration: none;
}
a.button-magenta {
	border-color: #790d52;
	box-shadow: 0 3px 13px -3px #2b041c;
	/* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#f11c9c+0,c91a7d+76 */
	background: #f11c9c; /* Old browsers */
	background: -moz-linear-gradient(top, #f11c9c 0%, #c91a7d 76%); /* FF3.6-15 */
	background: -webkit-linear-gradient(top, #f11c9c 0%,#c91a7d 76%); /* Chrome10-25,Safari5.1-6 */
	background: linear-gradient(to bottom, #f11c9c 0%,#c91a7d 76%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f11c9c', endColorstr='#c91a7d',GradientType=0 ); /* IE6-9 */
	color: #ffd7d7;
	text-shadow: 0px -1px 2px #161c1f;
}
a.button-magenta:hover {
	border-color: #9e0e6a;
	/* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#ff1ea5+0,dd1c83+100 */
	background: #ff1ea5; /* Old browsers */
	background: -moz-linear-gradient(top, #ff1ea5 0%, #dd1c83 100%); /* FF3.6-15 */
	background: -webkit-linear-gradient(top, #ff1ea5 0%,#dd1c83 100%); /* Chrome10-25,Safari5.1-6 */
	background: linear-gradient(to bottom, #ff1ea5 0%,#dd1c83 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ff1ea5', endColorstr='#dd1c83',GradientType=0 ); /* IE6-9 */
	color: #ffe1e1;
}
a.button-magenta:active {
	border-color: #4c0833;
	box-shadow: 0 3px 13px -2px #2b041c;
	/* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#dd1a89+0,bc186d+100 */
	background: #dd1a89; /* Old browsers */
	background: -moz-linear-gradient(top, #dd1a89 0%, #bc186d 100%); /* FF3.6-15 */
	background: -webkit-linear-gradient(top, #dd1a89 0%,#bc186d 100%); /* Chrome10-25,Safari5.1-6 */
	background: linear-gradient(to bottom, #dd1a89 0%,#bc186d 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#dd1a89', endColorstr='#bc186d',GradientType=0 ); /* IE6-9 */
	color: #f1c2c2;
}
body {
	background-color: #e3ce88;
	color: #222;
	font: 19px "Georgia", serif;
	line-height: 1.65em;
}
header { margin-left: -90px; }
header h1 { display: none; }
h2 {
    margin-top: 1.2em;
    margin-bottom: 0.4em;
}
p {
	margin-top: 0.8em;
	margin-bottom: 0.8em;
}
ul {
	list-style: disc;
}
.display-inline-block {
	display: inline-block;
}
.position-relative {
	position: relative;
}
.position-absolute {
	position: absolute;
}
.right-0 {
	right: 0;
}
.bottom-0 {
	bottom: 0;
}
.margin-top-0\.5 {
	margin-top: 0.5em;
}
.margin-bottom-0\.5 {
	margin-bottom: 0.5em;
}
.margin-bottom-0\.63 {
	margin-bottom: 0.63em;
}
.margin-bottom-1\.8 {
	margin-bottom: 1.8em;
}
.padding-top-9 {
	padding-top: 9px;
}
.padding-bottom-9 {
	padding-bottom: 9px;
}
.content {
	width: 640px;
	margin-top: 1.8em;
	margin-bottom: 2em;
	margin-left: 11%;
}
.code-block {
	padding: 12px 16px;
	overflow: auto;
    border: solid 2px #8c6e6e;
	border-radius: 6px;
	box-shadow: inset 1px 1px 10px #402929;
	background-color: #2d1f1c;
	color: #c9ccb4;
	text-shadow: 1px 3px 5px #230f0f;
}
@media screen and (max-width: 767px) {
	header {
		margin-left: -8px;
	}
	.content {
		margin-left: auto;
		margin-right: auto;
	}
}
@media screen and (max-width: 710px) {
	ul {
		margin-left: 2.5em;
	}
}
@media screen and (max-width: 669px) {
	.content {
		width: 96%;
	}
}
@media screen and (max-width: 481px) {
	.buy-button {
		position: static;
		display: inline-block;
	}
}

